--- a/public/search_review.html
+++ b/public/search_review.html
@@ -25,7 +25,7 @@
             <P>전/현직자들의 생생한 후기가 궁금하다면</P>
             <P>지금 바로 찾아보세요!</P>  
           </div>
-          <form class="search" id="search" method="get" action="#">
+          <form class="search" id="search" method="get" action="review/search">
             <fieldset>
               <div class="user-input">
                 <label><select name="sido" id="sido1"></select></label>              
