search 페이지네이션 완료

--- a/public/search_result.html
+++ b/public/search_result.html
@@ -219,7 +219,10 @@
             </li>
             {% endfor %}
           </ul>
-          <div class="pages">
+          <div class="page-wrap">
+            <div class="prev"></div>
+            <div class="pages"></div>
+            <div class="next"></div>
           </div>
         </div>
       </section>
