feat:별점항목, 해시태그 전면 교체

--- a/public/search_result.html
+++ b/public/search_result.html
@@ -149,11 +149,22 @@
                 <div class="hashtag">
                   <label>키워드</label>
                   <div class="tags">
+                    <button type="button" value="#역세권위치">#역세권위치</button>
+                    <button type="button" value="#시차출근제운영">#시차출근제운영</button>
+                    <button type="button" value="#성과급지급">#성과급지급</button>
+                    <button type="button" value="#재택근무운영">#재택근무운영</button>
                     <button type="button" value="#간식제공">#간식제공</button>
-                    <button type="button" value="#자유로운 휴가">#자유로운 휴가</button>
-                    <button type="button" value="#유연근무제">#유연근무제</button>
-                    <button type="button">#해시태그2</button>
-                    <button type="button">#해시태그3</button>
+                    <button type="button" value="#자유로운휴가">#자유로운휴가</button>
+                    <button type="button" value="#반차/반반차운영">#반차/반반차운영</button>
+                    <button type="button" value="#고급사양의업무장비">#고급사양의업무장비</button>
+                    <button type="button" value="#수평적호칭">#수평적호칭</button>
+                    <button type="button" value="#편안한자율복장">#편안한자율복장</button>
+                    <button type="button" value="#생일축하금지급">#생일축하금지급</button>
+                    <button type="button" value="#팀회식비지원">#팀회식비지원</button>
+                    <button type="button" value="#사내동아리활동비지원">#사내동아리활동비지원</button>
+                    <button type="button" value="#자기계발비지원">#자기계발비지원</button>
+                    <button type="button" value="#야근식대지원">#야근식대지원</button>
+                    <button type="button" value="#야근택시비지원">#야근택시비지원</button>
                   </div>
                   <input name="hashtag" class="hashtag-input" value style="display: none;">
                 </div>
