--- a/public/review_detail.html
+++ b/public/review_detail.html
@@ -66,31 +66,40 @@
 								<p>{{Corp.cnt}}개 리뷰</p>
 							</div>
 							<ul class="total_score_detail">
-								<li class="total_detail_star">
-									<span>{{Corp.avg_career}}</span>
-									<span></span>
-									<span>커리어 향상</span>
-								</li>
-								<li class="total_detail_star">
-									<span>{{Corp.avg_worklife}}</span>
-									<span></span>
-									<span>업무와 삶의 균형</span>
-								</li>
-								<li class="total_detail_star">
-									<span>{{Corp.avg_welfare}}</span>
-									<span></span>
-									<span>복리후생</span>
-								</li>
-								<li class="total_detail_star">
-									<span>{{Corp.avg_culture}}</span>
-									<span></span>
-									<span>조직문화</span>
-								</li>
-								<li class="total_detail_star">
-									<span>{{Corp.avg_leadership}}</span>
-									<span></span>
-									<span>리더십</span>
-								</li>
+								<div>
+									<li class="total_detail_star">
+										<span>{{Corp.avg_growth}}</span>
+										<span></span>
+										<span>성장 가능성</span>
+									</li>
+									<li class="total_detail_star">
+										<span>{{Corp.avg_leadership}}</span>
+										<span></span>
+										<span>리더십</span>
+									</li>
+									<li class="total_detail_star">
+										<span>{{Corp.avg_reward}}</span>
+										<span></span>
+										<span>급여 및 복지</span>
+									</li>
+								</div>
+								<div>
+									<li class="total_detail_star">
+										<span>{{Corp.avg_worth}}</span>
+										<span></span>
+										<span>일 가치감</span>
+									</li>
+									<li class="total_detail_star">
+										<span>{{Corp.avg_culture}}</span>
+										<span></span>
+										<span>사내 문화</span>
+									</li>
+									<li class="total_detail_star">
+										<span>{{Corp.avg_worklife}}</span>
+										<span></span>
+										<span>워라밸</span>
+									</li>
+								</div>
 							</ul>
 						</div>
 					</div>
@@ -114,33 +123,39 @@
 									<div class="star_detail" style="display: none;">
 										<div>
 											<div class="star_bg">
-												<span style="width: {{content.career_score*20}}%"></span>
+												<span style="width: {{content.growth_score*20}}%"></span>
 											</div>
-											<p>커리어 향상</p>
-										</div>
-										<div>
-											<div class="star_bg">
-												<span style="width: {{content.worklife_score*20}}%"></span>
-											</div>
-											<p>업무와 삶의 균형</p>
-										</div>
-										<div>
-											<div class="star_bg">
-												<span style="width: {{content.welfare_score*20}}%"></span>
-											</div>
-											<p>복리후생</p>
-										</div>
-										<div>
-											<div class="star_bg">
-												<span style="width: {{content.culture_score*20}}%"></span>
-											</div>
-											<p>조직 내 문화</p>
+											<p>성장 가능성</p>
 										</div>
 										<div>
 											<div class="star_bg">
 												<span style="width: {{content.leadership_score*20}}%"></span>
 											</div>
 											<p>리더십</p>
+										</div>
+										<div>
+											<div class="star_bg">
+												<span style="width: {{content.reward_score*20}}%"></span>
+											</div>
+											<p>급여 및 복지</p>
+										</div>
+										<div>
+											<div class="star_bg">
+												<span style="width: {{content.worth_score*20}}%"></span>
+											</div>
+											<p>일 가치감</p>
+										</div>
+										<div>
+											<div class="star_bg">
+												<span style="width: {{content.culture_score*20}}%"></span>
+											</div>
+											<p>사내 문화</p>
+										</div>
+										<div>
+											<div class="star_bg">
+												<span style="width: {{content.worklife_score*20}}%"></span>
+											</div>
+											<p>워라밸</p>
 										</div>
 									</div>
 								</div>
@@ -175,6 +190,17 @@
 											<span>{{content.hashtag_3}}</span>
 											<span>{{content.hashtag_4}}</span>
 											<span>{{content.hashtag_5}}</span>
+											<span>{{content.hashtag_6}}</span>
+											<span>{{content.hashtag_7}}</span>
+											<span>{{content.hashtag_8}}</span>
+											<span>{{content.hashtag_9}}</span>
+											<span>{{content.hashtag_10}}</span>
+											<span>{{content.hashtag_11}}</span>
+											<span>{{content.hashtag_12}}</span>
+											<span>{{content.hashtag_13}}</span>
+											<span>{{content.hashtag_14}}</span>
+											<span>{{content.hashtag_15}}</span>
+											<span>{{content.hashtag_16}}</span>
 										</div>	
 									</div>
 									<button type="button" class="comment_like" onclick="likesClick(this)">
