--- a/public/search_review.html
+++ b/public/search_review.html
@@ -91,11 +91,12 @@
         <div>
           <div>
             <ul class="details">
-              <li class="select-detail"><button value="avg_career">커리어 향상</button></li>
-              <li><button value="avg_worklife" >업무와 삶의 균형</button></li>
-              <li><button value="avg_welfare" >복리후생</button></li>
-              <li><button value="avg_culture" >조직 내 문화</button></li>
+              <li class="select-detail"><button value="avg_growth">성장 가능성</button></li>
               <li><button value="avg_leadership" >리더십</button></li>
+              <li><button value="avg_reward">급여 및 복지</button></li>
+              <li><button value="avg_worth">일 가치감</button></li>
+              <li><button value="avg_culture">사내 문화</button></li>
+              <li><button value="avg_worklife">워라밸</button></li>
             </ul>
           </div>
           <ul class="detail-top5">
@@ -108,41 +109,47 @@
                   <p>{{detail.sido}} {{detail.gugun}}</p>
                 </div>
                 <div class="detail-top5-highlight">
-                  <p>커리어 향상</p>
+                  <p>성장 가능성</p>
                   <div>
                     <img src="/styles/images/Star_1.png">
-                    <span>{{detail.avg_career}}</span>
+                    <span>{{detail.avg_growth}}</span>
                   </div>
                 </div>
                 <ul class="detail-top5-details">
                   <li style="display: none;">
-                    <p>커리어 향상</p>
+                    <p>성장 가능성</p>
                     <div class="star_bg">
-                      <span style="width: {{detail.avg_career*20}}%"></span>
-                    </div>
-                  </li>
-                  <li>
-                    <p>업무와 삶의 균형</p>
-                    <div class="star_bg">
-                      <span style="width: {{detail.avg_worklife*20}}%"></span>
-                    </div>
-                  </li>
-                  <li>
-                    <p>복리후생</p>
-                    <div class="star_bg">
-                      <span style="width: {{detail.avg_welfare*20}}%"></span>
-                    </div>
-                  </li>
-                  <li>
-                    <p>조직 내 문화</p>
-                    <div class="star_bg">
-                      <span style="width: {{detail.avg_culture*20}}%"></span>
+                      <span style="width: {{detail.avg_growth*20}}%"></span>
                     </div>
                   </li>
                   <li>
                     <p>리더십</p>
                     <div class="star_bg">
                       <span style="width: {{detail.avg_leadership*20}}%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>급여 및 복지</p>
+                    <div class="star_bg">
+                      <span style="width: {{detail.avg_reward*20}}%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>일 가치감</p>
+                    <div class="star_bg">
+                      <span style="width: {{detail.avg_worth*20}}%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>사내 문화</p>
+                    <div class="star_bg">
+                      <span style="width: {{detail.avg_culture*20}}%"></span>
+                    </div>
+                  </li>
+                  <li>
+                    <p>워라밸</p>
+                    <div class="star_bg">
+                      <span style="width: {{detail.avg_worklife*20}}%"></span>
                     </div>
                   </li>
                 </ul>
