feat: 시도 정보 정리

--- a/public/review_detail.html
+++ b/public/review_detail.html
@@ -22,7 +22,7 @@
 					<div class="corp_info_data">
 						<div>
 							<span id="Corp_name">{{Corp.name}}</span>
-							<span>{{Corp.sido+" "+Corp.gugun}}</span>    
+							<span>{{Corp.city+" "+Corp.gugun}}</span>    
 						</div>
 						{% if cnt %}
 						<div>
