--- a/public/review_write.html
+++ b/public/review_write.html
@@ -22,7 +22,7 @@
 						<div class="corp_info_data">
 							<div>
 								<span>{{Corp.name}}</span>
-								<span>{{Corp.sido+" "+Corp.gugun}}</span>    
+								<span>{{Corp.city+" "+Corp.gugun}}</span>    
 							</div>
 							{% if Corp.cnt %}
 							<div>
