--- a/public/review_detail.html
+++ b/public/review_detail.html
@@ -48,9 +48,9 @@
 						</div>
 						{% endif %}
 					</div>
-					<button type="button" onclick="location.href='/review_write/{{Corp.name}}'" class="btn_review">이 기관 리뷰하기</button>
+					<button type="button" onclick="location.href='/review/write/corp/{{Corp.name}}'" class="btn_review">이 기관 리뷰하기</button>
 				</div>
-				<button type="button" onclick="location.href='/review_write/{{Corp.name}}'" class="btn_write"></button>
+				<button type="button" onclick="location.href='/review/write/corp/{{Corp.name}}'" class="btn_write"></button>
 			</div>
 			<div class="contents_wrap">
 				<div class="contents_main">
