--- a/public/review_search.html
+++ b/public/review_search.html
@@ -8,7 +8,7 @@
 
   <link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
   <link href="/styles/webcomponent.css" rel="stylesheet">
-  <link href="/styles/search_result.css" rel="stylesheet">
+  <link href="/styles/review_search.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -255,6 +255,6 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script defer src="/js/search_result.js"></script>
+  <script defer src="/js/review_search.js"></script>
 </body>
 </html>
