--- a/public/write_search.html
+++ b/public/write_search.html
@@ -5,9 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>리뷰작성</title>
-		<link href="./styles/style_reset.css" rel="stylesheet" type="text/css">
-		<link href="./styles/webcomponent.css" rel="stylesheet">
-    <link href="./styles/search_write.css" rel="stylesheet">
+		<link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
+		<link href="/styles/webcomponent.css" rel="stylesheet">
+    <link href="/styles/write_search.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
@@ -16,7 +16,7 @@
 			</div>
       <main>
 				<div class="main_wrap">
-					<form id="search_corp" class="search" method="get" action="/review_write/:name">
+					<form id="search_corp" class="search" method="get" action="/review/write/corp/:name">
 						<div class="user_input">
 							<input type ="text" id="search_input" placeholder="기관명을 입력해주세요." autocomplete="off">
 							<ul class="auto_corp" style="display: none;">
@@ -35,11 +35,11 @@
 		<footer>
 			<footer-component></footer-component>
 		</footer>
-		<script type="module" src="./js/webcomponent.js"></script>
+		<script type="module" src="/js/webcomponent.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 		<script src="https://unpkg.com/hangul-js" type="text/javascript"></script>
-		<script defer src="./js/search_write.js"></script>
+		<script defer src="/js/write_search.js"></script>
 		<script defer src="/js/modules.js"></script>
 	</body>
 </html>
