feat: sql 정리, 에러처리

--- a/public/500.html
+++ b/public/500.html
@@ -16,7 +16,7 @@
       </div>
       <main>
         <div class="main_wrap">
-          <p class="msg">죄송합니다. 존재하지 않는 페이지입니다.</p>
+          <p class="msg">죄송합니다. 오류가 발생하였습니다.</p>
           <div class="page">
             <a href="javascript:history.back();" class="prev_page">이전 페이지로 돌아가기</a>
             <a href="/" class="main_page">메인 페이지로 가기</a>
